fixed horizontal scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   grid-template-rows: repeat(6, auto);
   
   justify-content: center;
-  width: 100%;
+  /* width: 100%; */
   /* background-color: #2196F3; */
   padding: 10px;
 }
